--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
+    "start" : "parcel index.html",
     "test": "jest"
   },
   "author": "",
