--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "start" : "parcel index.html",
+    "start": "parcel index.html",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "parce": "^1.2.8",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
